packable/packable-derive-test/tests/pass/newtype.rs
// Copyright 2023 IOTA Stiftung
// SPDX-License-Identifier: Apache-2.0

#![allow(unused_imports)]

use core::convert::Infallible;

use packable::Packable;

#[derive(Packable)]
#[packable(unpack_error = Infallible)]
pub struct Num(u32);

fn main() {}
