packable/packable-derive-test/tests/fail/union.rs
// Copyright 2021-2022 IOTA Stiftung
// SPDX-License-Identifier: Apache-2.0

#![allow(unused_imports)]

use packable::Packable;

use core::convert::Infallible;

#[derive(Packable)]
#[packable(unpack_error = Infallible)]
pub union MaybeInt {
    just: u32,
    nothing: (),
}

fn main() {}
